format user posts

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,4 +23,33 @@
       <a class="website">stupiderthanbefore.substack.com</a>
     </div>
   </div>
+  <div class="user-tabs">
+  <a class="tab active" href="">
+    <i class="fa fa-th"></i>
+    POSTS
+  </a>
+  <a class="tab" href="">
+    <i class="fa fa-tv"></i>
+    IGTV
+  </a>
+  <a class="tab" href="">
+    <i class="fa fa-bookmark"></i>
+    SAVED
+  </a>
+  <a class="tab" href="">
+    <i class="fa fa-tag"></i>
+    TAGGED
+  </a>
+</div>
+    <div class="user-images">
+        <div class="wrapper">
+            <img src="https://www.canr.msu.edu/contentAsset/image/9c8f1a21-90e3-486d-9ca0-dd4a7b4b439d/fileAsset/filter/Resize,Jpeg/resize_w/750/jpeg_q/80">
+        </div>
+        <div class="wrapper">
+            <img src="https://cdn-a.william-reed.com/var/wrbm_gb_food_pharma/storage/images/publications/feed/feednavigator.com/news/r-d/how-can-the-prenatal-phase-influence-the-lifelong-performance-of-a-pig/8769254-1-eng-GB/How-can-the-prenatal-phase-influence-the-lifelong-performance-of-a-pig_wrbm_large.jpg">
+        </div>
+        <div class="wrapper">
+            <img src="https://media.wired.co.uk/photos/606d9f5fdbc4c121710a3fdc/16:9/w_2000,h_1125,c_limit/pigbrain.jpg">
+        </div>
+    </div>
 </div>
