--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,8 +10,8 @@
     <div class="col-md-8 basic-info">
       <div class="user-wrapper">
         <h2 class="username">finsta_user</h2>
-        <a class="edit-profile">
-          <button>Edit Profile</button>
+        <a class="edit-profile" href="<%= edit_user_path(current_user) %>">
+            <button>Edit Profile</button>
         </a>
       </div>
       <ul class="posts">
