--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
     
     <div class="col-md-8 basic-info">
       <div class="user-wrapper">
-        <h2 class="username">finsta_user</h2>
+        <h2 class="username"><%= current_user.username%></h2>
         <a class="edit-profile" href="<%= edit_user_path(current_user) %>">
             <button>Edit Profile</button>
         </a>
@@ -19,8 +19,8 @@
         <li><span>195</span> followers</li>
         <li><span>345</span> following</li>
       </ul>
-      <h2 class="name">Ian Marshall</h2>
-      <a class="website">stupiderthanbefore.substack.com</a>
+      <h2 class="name"><%current_user.username%></h2>
+      <%=link_to current_user.website, current_user.website, class: 'website'%>
     </div>
   </div>
   <div class="user-tabs">
