--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="user-profile">
   <div class="profile row">
     <div class="col-md-4 avatar">
@@ -15,7 +14,7 @@
         </a>
       </div>
       <ul class="posts">
-        <li><span>12</span> posts</li>
+        <li><span><%= @posts.count %></span> posts</li>
         <li><span>195</span> followers</li>
         <li><span>345</span> following</li>
       </ul>
@@ -41,15 +40,11 @@
     TAGGED
   </a>
 </div>
-    <div class="user-images">
-        <div class="wrapper">
-            <img src="https://www.canr.msu.edu/contentAsset/image/9c8f1a21-90e3-486d-9ca0-dd4a7b4b439d/fileAsset/filter/Resize,Jpeg/resize_w/750/jpeg_q/80">
-        </div>
-        <div class="wrapper">
-            <img src="https://cdn-a.william-reed.com/var/wrbm_gb_food_pharma/storage/images/publications/feed/feednavigator.com/news/r-d/how-can-the-prenatal-phase-influence-the-lifelong-performance-of-a-pig/8769254-1-eng-GB/How-can-the-prenatal-phase-influence-the-lifelong-performance-of-a-pig_wrbm_large.jpg">
-        </div>
-        <div class="wrapper">
-            <img src="https://media.wired.co.uk/photos/606d9f5fdbc4c121710a3fdc/16:9/w_2000,h_1125,c_limit/pigbrain.jpg">
-        </div>
-    </div>
+  <div class="user-images">
+    <% @posts.each do |post|%>
+      <div class="wrapper">
+        <%=image_tag post.image %>
+      </div>
+    <% end %>
+  </div>
 </div>
